// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AddPodcastForm > matches the snapshot 1`] = `
"<form novalidate="">
  <div class="fields">
    <div class="inputField"><label class="label" for="feedUrl">feed Url <span class="required">*</span></label><input id="feedUrl" type="text" autocomplete="off" required="" placeholder="RSS feed url" class="input" value="">
      <!--v-if-->
    </div>
  </div><button class="submitButton button" type="submit"><span class="content"> Add podcast <!--v-if--></span></button>
</form>"
`;

exports[`AddPodcastForm > when form is valid > matches the snapshot 1`] = `
"<form novalidate="">
  <div class="fields">
    <div class="inputField"><label class="label" for="feedUrl">feed Url <span class="required">*</span></label><input id="feedUrl" type="text" autocomplete="off" required="" placeholder="RSS feed url" class="input" value="https://www.test.com">
      <!--v-if-->
    </div>
  </div><button type="submit" class="submitButton disabled button" disabled=""><span class="content"> Add podcast <span class="loader"><span class="loader"></span><span class="visually-hidden">Loading data</span></span></span></button>
</form>"
`;
